reportscombine fix: test data

--- a/tests/data/expected-combinereports/report-combinereports.html
+++ b/tests/data/expected-combinereports/report-combinereports.html
@@ -281,7 +281,7 @@ table th.sort-up:before {
 </theader>
 <tbody>
 <tr><td>1</td><td>NA12878</td><td>1574530218</td><td>159027.552018</td><td>98.74</td><td>37.9970</td><td>3.7989</td><td>37.2403</td><td>5.4597</td></tr>
-<tr><td>2</td><td>test</td><td>1574530218</td><td>159027.552018</td><td></td><td>37.9970</td><td>3.7989</td><td>37.2403</td><td>5.4597</td></tr>
+<tr><td>2</td><td>test</td><td>1574530218</td><td>159027.552018</td><td>98.74</td><td>37.9970</td><td>3.7989</td><td>37.2403</td><td>5.4597</td></tr>
 </tbody></table>
 <script>
   new Tablesort(document.getElementById('yieldandquality'));
