--- a/docs-src/install.html
+++ b/docs-src/install.html
@@ -24,8 +24,8 @@ downloaded archive somewhere in the PATH
 
 </p>
 <ul>
-<li><a href="https://github.com/derijkp/genomecomb/releases/download/0.106.0/genomecomb-0.106.0-Linux-x86_64.tar.gz">genomecomb-0.106.0-Linux-x86_64.tar.gz</a> (github)
-<li><a href="http://genomecomb.bioinf.be/download/genomecomb-0.106.0-Linux-x86_64.tar.gz">genomecomb-0.106.0-Linux-x86_64.tar.gz</a> (VIB/UAntwerp server)
+<li><a href="https://github.com/derijkp/genomecomb/releases/download/0.107.0/genomecomb-0.107.0-Linux-x86_64.tar.gz">genomecomb-0.107.0-Linux-x86_64.tar.gz</a> (github)
+<li><a href="http://genomecomb.bioinf.be/download/genomecomb-0.107.0-Linux-x86_64.tar.gz">genomecomb-0.107.0-Linux-x86_64.tar.gz</a> (VIB/UAntwerp server)
 <li><a href="old_releases.html#genomecomb">older releases</a>
 </ul>
 
@@ -37,7 +37,7 @@ executable itself must stay in the application directory to work.)
 
 Example using a softlink to make it available in a bin directory. e.g.:
 <pre>
-ln -s /opt/genomecomb-0.106.0-Linux-x86_64/cg /usr/local/bin/cg
+ln -s /opt/genomecomb-0.107.0-Linux-x86_64/cg /usr/local/bin/cg
 </pre>
 </p>
 
@@ -51,7 +51,7 @@ You can download these for several species/builds (some of these, esp human are 
 
 </p>
 <ul>
-<li><a href="http://genomecomb.bioinf.be/download/refdb_hg38-0.106.0.tar.gz">refdb_hg38-0.106.0.tar.gz</a>
+<li><a href="http://genomecomb.bioinf.be/download/refdb_hg38-0.107.0.tar.gz">refdb_hg38-0.107.0.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/refdb_hg19-0.106.0.tar.gz">refdb_hg19-0.106.0.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/refdb_mm10-0.106.0.tar.gz">refdb_mm10-0.106.0.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/refdb_dm6-0.106.0.tar.gz">refdb_dm6-0.106.0.tar.gz</a>
@@ -124,12 +124,14 @@ in the PATH.
 
 <ul>
 <li><a href="http://genomecomb.bioinf.be/download/extra/minimap2-2.24-linux-x86_64.tar.gz">minimap2-2.24-linux-x86_64.tar.gz</a>
+<li><a href="http://genomecomb.bioinf.be/download/extra/clair3-0.1.12-linux-x86_64.tar.gz">clair3-0.1.12-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/clair3-0.1.5-linux-x86_64.tar.gz">clair3-0.1.5-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/longshot-0.4.1-linux-x86_64.tar.gz">longshot-0.4.1-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/sniffles-2.0.7-linux-x86_64.tar.gz">sniffles-2.0.7-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/cutesv-1.0.11-linux-x86_64.tar.gz">cutesv-1.0.11-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/nanopolish-0.13.2-linux-x86_64.tar.gz">nanopolish-0.13.2-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/flair-1.5-linux-x86_64.tar.gz">flair-1.5-linux-x86_64.tar.gz</a>
+<li><a href="http://genomecomb.bioinf.be/download/extra/isoquant-3.1.2-linux-x86_64.tar.gz">isoquant-3.1.2-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/isoquant-3.1.0-linux-x86_64.tar.gz">isoquant-3.1.0-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/flames-c1_413e09c-linux-x86_64.tar.gz">flames-c1_413e09c-linux-x86_64.tar.gz</a>
 <li><a href="http://genomecomb.bioinf.be/download/extra/sqanti3-4.2-linux-x86_64.tar.gz">sqanti3-4.2-linux-x86_64.tar.gz</a>
