--- a/docs-src/install.html
+++ b/docs-src/install.html
@@ -202,7 +202,7 @@ wget https://genomecomb.bioinf.be/download/genomecomb-0.109.0-Linux-x86_64.tar.g
 tar xvzf genomecomb-0.109.0-Linux-x86_64.tar.gz
 ln -s /opt/genomecomb/genomecomb-0.109.0-Linux-x86_64/cg /usr/local/bin/cg
 
-# Install the hg38 refernce databases and the software needed to run the ont preset.
+# Install the hg38 reference databases and the software needed to run the ont preset.
 cg install hg38 hg38-cadd hg38-minimap2 ont
 
 #wget https://genomecomb.bioinf.be/download/refdb_hg38-0.109.0.tar.gz
