doc: documentation updates: version, index, install, new functions and options in 0.110.0

--- a/docs-src/index.html
+++ b/docs-src/index.html
@@ -23,7 +23,7 @@ extensive <a href="intro.html">documentation</a>, we also provide a shortlist of
 common "<a href="howto.html">protocols</a>" used to analyse whole genome sequencing data. 
 A short list of analyses that can be performed using GenomeComb is given below:</p>
 <ul>
-<li>Flexible analysis pipeline
+<li>Flexible, multi-technology, multi-omics analysis pipeline
 <ul>
   <li>Starting from raw data, can run combinations of multiple, selectable analysis 
       tools in parallel and integrate the results into easily searchable files. 
