feat: AnnotSV (wip) - add cg annotate_AnnotSV subcommand, adding annotation works

--- a/docs-src/install.html
+++ b/docs-src/install.html
@@ -199,6 +199,7 @@ cg install ont
 <li><a href="https://genomecomb.bioinf.be/download/extra/sqanti3-4.2-linux-x86_64.tar.gz">sqanti3-4.2-linux-x86_64.tar.gz</a>
 <li><a href="https://genomecomb.bioinf.be/download/extra/STAR-2.7.9a_2021-06-25-linux-x86_64.tar.gz">STAR-2.7.9a_2021-06-25-linux-x86_64.tar.gz</a>
 <li><a href="https://genomecomb.bioinf.be/download/extra/strelka-2.9.10-linux-x86_64.tar.gz">strelka-2.9.10-linux-x86_64.tar.gz</a>
+<li><a href="https://genomecomb.bioinf.be/download/extra/AnnotSV-3.4.4-linux-x86_64.tar.gz">AnnotSV-3.4.4-linux-x86_64.tar.gz</a>
 <li><a href="old_releases.html#software">older versions</a>
 </ul>
 
