--- a/docs-src/install.html
+++ b/docs-src/install.html
@@ -174,7 +174,8 @@ cg install ont
 </pre>
 
 <ul>
-<li><a href="https://genomecomb.bioinf.be/download/extra/clair3-1.0.10-linux-x86_64.tar.gz">clair3-1.0.10-linux-x86_64.tar.gz</a>
+<li><a href="https://genomecomb.bioinf.be/download/extra/AnnotSV-3.4.6-linux-x86_64.tar.gz">AnnotSV-3.4.6-linux-x86_64.tar.gz</a>
+<li><a href="https://genomecomb.bioinf.be/download/extra/clair3-1.1.1-linux-x86_64.tar.gz">clair3-1.1.1-linux-x86_64.tar.gz</a>
 <li><a href="https://genomecomb.bioinf.be/download/extra/cutesv-1.0.11-linux-x86_64.tar.gz">cutesv-1.0.11-linux-x86_64.tar.gz</a>
 <li><a href="https://genomecomb.bioinf.be/download/extra/dirR-4.2.1-2-linux-x86_64.tar.gz">dirR-4.2.1-2-linux-x86_64.tar.gz</a>
 <li><a href="https://genomecomb.bioinf.be/download/extra/flair-2.0-linux-x86_64.tar.gz">flair-2.0-linux-x86_64.tar.gz</a>
